# mailglyph-python

./: .gitignore  AGENTS.md  CHANGELOG.md  README.md  pyproject.toml  release-please-config.json
.github/workflows/: ci.yml  publish.yml  release-please.yml
docs/: sdk-plan-python.md
src/mailglyph/: __init__.py  client.py  exceptions.py  http_client.py  models.py
src/mailglyph/resources/: __init__.py  _utils.py  campaigns.py  emails.py
src/mailrify/: __init__.py  client.py  exceptions.py  http_client.py  models.py
src/mailrify/resources/: contacts.py  emails.py  events.py  segments.py
tests/integration/: test_api.py
tests/unit/: test_campaigns.py  test_contacts.py  test_emails.py  test_errors.py  test_events.py  test_http_client.py  test_segments.py
