[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[project]
name = "mailrify"
version = "1.0.1"
description = "Official Mailrify Python SDK"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
  { name = "Mailrify" }
]
keywords = ["mailrify", "email", "sdk"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Typing :: Typed"
]
dependencies = [
  "eval-type-backport>=0.2.0; python_version < '3.10'",
  "httpx>=0.25",
  "pydantic>=2.0"
]

[project.optional-dependencies]
dev = [
  "build>=1.2",
  "mypy>=1.10",
  "pytest>=7.4",
  "pytest-asyncio>=0.21",
  "respx>=0.21",
  "ruff>=0.5"
]

[project.urls]
Homepage = "https://github.com/Mailrify/mailrify-python"
Repository = "https://github.com/Mailrify/mailrify-python"
Issues = "https://github.com/Mailrify/mailrify-python/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/mailrify"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N"]

[tool.mypy]
python_version = "3.9"
strict = true
warn_unused_configs = true

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
  "integration: integration tests that require a real Mailrify API key"
]
